# dynamic-c-types

./: .gitignore  CMakeLists.txt  allocator.h  config.h  list.c  list.h  micc.c  micc.h  num.c  num.h  readme.txt  str.c  str.h  tagptr.c  tagptr.h  test.c  var.c  var.h
